feat(configs): 没有consul 默认读取本地文件
