# docs/swagger.json
@@ -11,55 +11,6 @@
     },
     "host": "192.168.1.163:8081",
     "paths": {
-        "/api/account/info": {
-            "get": {
-                "security": [
-                    {
-                        "token": []
-                    },
-                    {
-                        "OAuth2Application": [
-                            "account"
-                        ]
-                    }
-                ],
-                "description": "用户个人信息",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "account服务"
-                ],
-                "summary": "用户个人信息",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authorization",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Account"
-                        }
-                    }
-                }
-            }
-        },
         "/api/health": {
             "get": {
                 "description": "服务是否启动正常检查",
@@ -88,8 +39,57 @@
                 }
             }
         },
+        "/api/v1/account/info": {
+            "post": {
+                "description": "用户个人信息",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account服务"
+                ],
+                "summary": "request.WechatAccount",
+                "parameters": [
+                    {
+                        "maxLength": 10,
+                        "minLength": 5,
+                        "type": "string",
+                        "description": "string valid",
+                        "name": "string",
+                        "in": "query"
+                    },
+                    {
+                        "description": "微信参数",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Account"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Account"
+                        }
+                    }
+                }
+            }
+        },
         "/api/wechat": {
             "post": {
+                "security": [
+                    {
+                        "OAuth2Application": [
+                            "account"
+                        ]
+                    }
+                ],
                 "description": "微信服务",
                 "consumes": [
                     "application/json"
@@ -103,13 +103,20 @@
                 "summary": "微信服务",
                 "parameters": [
                     {
-                        "description": "Name",
-                        "name": "name",
+                        "description": "微信参数",
+                        "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/request.WechatAccount"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -123,6 +130,10 @@
     "definitions": {
         "model.Account": {
             "type": "object",
+            "required": [
+                "id",
+                "name"
+            ],
             "properties": {
                 "id": {
                     "type": "string"
@@ -131,6 +142,25 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.WechatAccount": {
+            "type": "object",
+            "required": [
+                "mobile",
+                "nickname",
+                "openid"
+            ],
+            "properties": {
+                "mobile": {
+                    "type": "integer"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "openid": {
                     "type": "string"
                 }
             }
