# src/model/request/account.go
@@ -1,0 +1,7 @@
+package request
+
+type Account struct {
+	ID     string `json:"id" binding:"required"`
+	Name   string `json:"name" binding:"required"`
+	Mobile string `json:"mobile"`
+}
