# src/routes/router.go
@@ -17,23 +17,23 @@ var r = gin.Default()
 
 func InitRouter() *gin.Engine {
 
-	r.Use(
-		middleware.CORSMiddleware(),	//cors跨域
-		middleware.LoadCurrentApi(),    //加载当前api
-		middleware.LoadCurrentUser(),	//加载当前用户
-		middleware.ApiValidator(),		//api参数校验
-	)
-
 	api := r.Group("/api")
 	{
+		api.Use(
+			middleware.CORSMiddleware(),  //cors跨域
+			// middleware.LoadCurrentApi(),  //加载当前api
+			// middleware.LoadCurrentUser(), //加载当前用户
+			// middleware.ApiValidator(),    //api参数校验
+		)
+
 		//健康检查
 		api.GET("/health", controller.Health)
-	}
 
-	apiV1 := r.Group("/v1")
-	{
-		apiV1.GET("/account/info", v1.AccountInfo)
-		apiV1.GET("/account/wechat", v1.Wechat)
+		apiV1 := api.Group("/v1")
+		{
+			apiV1.POST("/account/info", v1.AccountInfo)
+			apiV1.GET("/account/wechat", v1.Wechat)
+		}
 	}
 
 	//pprof
